--- a/app/src/main/res/menu/navigation_menu_seller.xml
+++ b/app/src/main/res/menu/navigation_menu_seller.xml
@@ -9,10 +9,10 @@
         android:id="@+id/navChat"
         android:icon="@drawable/ic_chat"
         android:title="Chat" />
-    <item
-        android:id="@+id/navSale"
-        android:icon="@drawable/ic_sold"
-        android:title="Penjualan" />
+<!--    <item-->
+<!--        android:id="@+id/navSale"-->
+<!--        android:icon="@drawable/ic_sold"-->
+<!--        android:title="Penjualan" />-->
     <item
         android:id="@+id/navOthers"
         android:icon="@drawable/ic_account"
