--- a/app/src/main/res/layout/item_list_chat.xml
+++ b/app/src/main/res/layout/item_list_chat.xml
@@ -4,11 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/itemChat"
     android:layout_marginBottom="6dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/white"
         android:layout_marginHorizontal="24dp"
         android:paddingVertical="12dp">
 
