--- a/app/src/main/res/layout/fragment_others_seller.xml
+++ b/app/src/main/res/layout/fragment_others_seller.xml
@@ -127,7 +127,7 @@
                         app:layout_constraintTop_toBottomOf="@id/tvOther" />
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tvSyarat7Ketentuan"
+                        android:id="@+id/tvSyaratKetentuan"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="12dp"
@@ -145,7 +145,7 @@
                         android:textColor="@color/red"
                         android:textStyle="bold"
                         app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/tvSyarat7Ketentuan" />
+                        app:layout_constraintTop_toBottomOf="@id/tvSyaratKetentuan" />
 
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
