--- a/app/src/main/res/layout/fragment_others_seller.xml
+++ b/app/src/main/res/layout/fragment_others_seller.xml
@@ -8,6 +8,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:id="@+id/parentMainSeller"
         android:layout_height="match_parent">
 
         <com.google.android.material.appbar.AppBarLayout
