--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -83,36 +83,25 @@
                         tools:background="@color/black" />
 
                     <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tvProduct"
+                        android:id="@+id/tvSeller"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="32dp"
                         android:layout_marginTop="24dp"
-                        android:text="Produk Baru Ditambahkan"
+                        android:text="Toko"
                         android:textColor="@color/black"
                         android:textSize="18sp"
                         app:layout_constraintLeft_toLeftOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/vpBanner" />
 
                     <androidx.recyclerview.widget.RecyclerView
-                        android:id="@+id/rvProduct"
+                        android:id="@+id/rvSeller"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginHorizontal="32dp"
                         android:layout_marginTop="12dp"
                         android:paddingBottom="6dp"
-                        app:layout_constraintTop_toBottomOf="@+id/tvProduct" />
-
-                    <androidx.appcompat.widget.AppCompatTextView
-                        android:id="@+id/tvAllProduct"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="24dp"
-                        android:text="Lihat Semua"
-                        android:textColor="@color/red"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        app:layout_constraintRight_toRightOf="parent"
-                        app:layout_constraintTop_toBottomOf="@+id/rvProduct" />
+                        app:layout_constraintTop_toBottomOf="@+id/tvSeller" />
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
             </ScrollView>
